# jobtrack

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  jobtrack.db  pyproject.toml  requirements.txt  start.bat  start.sh
.github/workflows/: ci.yml
backend/app/: __init__.py  ats_service.py  ats_service_free.py  config.py  database.py  file_service.py  main.py  models.py
frontend/: app.js  index.html  styles.css
tests/: conftest.py  sql_practice.py  test_api.py  test_sql.py
